test/compilable/imports/imp15907d.d
module imports.imp15907d;

class Base
{
    protected int a;
}
