test/fail_compilation/imports/test2830c.d
module imports.test2830c;

private class TestClass
{
}
